fix: make checked checkboxes more readable

--- a/resources/css/_variables.scss
+++ b/resources/css/_variables.scss
@@ -89,6 +89,8 @@ $input-disabled-bg: #212529;
 $input-group-addon-bg: $secondary;
 $input-group-addon-color: $silver;
 
+$form-check-input-checked-bg-color: $success;
+
 // Progress bar
 $progress-bg: $white;
 $progress-bar-color: $body-color;
